--- a/examples/list_devices/index.html
+++ b/examples/list_devices/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <meta charset="utf-8">
-  <title>WebMIDIAPIShim</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
-  <script src="../../lib/WebMIDIAPI.js"></script>
-  <script src="main.js"></script>
-  <link rel="stylesheet" type="text/css" href="../../stylesheets/reset.css">
-  <link rel="stylesheet" type="text/css" href="../../stylesheets/prism.css">
-  <link rel="stylesheet" type="text/css" href="main.css">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="requiresActiveX=true" />
+    <title>WebMIDIAPIShim 2</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
+    <script src="../../build/WebMIDIAPI.min.js"></script>
+    <script src="main.js"></script>
+    <link rel="stylesheet" type="text/css" href="../css/reset.css">
+    <link rel="stylesheet" type="text/css" href="../css/prism.css">
+    <link rel="stylesheet" type="text/css" href="main.css">
 </head>
+
 <body>
-  <div id="container" class="cf">
-    <div id="inputs"></div>
-    <div id="outputs"></div>
-  </div>
-  <pre class="line-numbers" data-src="main.js"></pre>
-  <script src="../../javascripts/prism.js"></script>
+    <div id="container" class="cf">
+        <div id="inputs"></div>
+        <div id="outputs"></div>
+    </div>
+    <pre class="line-numbers" data-src="main.js"></pre>
+    <script src="../js/prism.js"></script>
+
 </body>
+
 </html>
