Update script URL.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <section id="main_content" class="inner">
             <h3>To use the Web MIDI API Polyfill</h3>
             <p>Just include</p>
-            <pre>&lt;script src='http://cwilso.github.com/WebMIDIAPIShim/build/WebMIDIAPI.min.js'&gt;&lt;/script&gt;</pre>
+            <pre>&lt;script src='https://cwilso.github.io/WebMIDIAPIShim/build/WebMIDIAPI.min.js'&gt;&lt;/script&gt;</pre>
             <p>in your HTML source.</p>
             <h3>Test it out!</h3>
             <p>
